--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "recoil": "^0.7.5"
   },
   "devDependencies": {
