--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.0",
     "recoil": "^0.7.5"
