ADD: 커뮤니티 글쓰기 기능

--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.27.2",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.0",
-    "recoil": "^0.7.5"
+    "recoil": "^0.7.5",
+    "tinymce": "^6.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
