--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.0",
     "recoil": "^0.7.5",
-    "tinymce": "^6.2.0"
+    "tinymce": "^6.2.0",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
