--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^4.2.0",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -18,6 +19,7 @@
     "react-intersection-observer": "^9.4.0",
     "recoil": "^0.7.5",
     "tinymce": "^6.2.0",
+    "uuid": "^9.0.0",
     "xss": "^1.0.14"
   },
   "devDependencies": {
