--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "next": "12.2.5",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "18.7.5",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "eslint": "8.22.0",
