--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,53 +1,99 @@
 {
   "name": "BSM",
   "short_name": "BSM",
+  "description": "부산소마고 학교 지원서비스",
   "icons": [
     {
-     "src": "/icons/app/icon-48x48.png",
-     "sizes": "48x48",
-     "type": "image/png"
-     },
-     {
-     "src": "/icons/app/icon-72x72.png",
-     "sizes": "72x72",
-     "type": "image/png"
-     },
-     {
-     "src": "/icons/app/icon-96x96.png",
-     "sizes": "96x96",
-     "type": "image/png"
-     },
-     {
-     "src": "/icons/app/icon-128x128.png",
-     "sizes": "128x128",
-     "type": "image/png"
-     },
-     {
-     "src": "/icons/app/icon-144x144.png",
-     "sizes": "144x144",
-     "type": "image/png"
-     },
-     {
-     "src": "/icons/app/icon-152x152.png",
-     "sizes": "152x152",
-     "type": "image/png"
-     },
-     {
-     "src": "/icons/app/icon-192x192.png",
-     "sizes": "192x192",
-     "type": "image/png"
-     },
-     {
-     "src": "/icons/app/icon-384x384.png",
-     "sizes": "384x384",
-     "type": "image/png"
-     },
-     {
-     "src": "/icons/app/icon-512x512.png",
-     "sizes": "512x512",
-     "type": "image/png"
-     }
- ],
+      "src": "/icons/app/icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/app/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/app/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/app/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/app/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/app/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/app/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/app/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/app/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/app/maskable_icon_x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/app/maskable_icon_x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/app/maskable_icon_x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/app/maskable_icon_x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/app/maskable_icon_x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/app/maskable_icon_x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
   "start_url": "/",
   "display": "standalone",
   "background_color": "#1a1a1a",
