--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^4.2.0",
+    "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "next": "12.2.5",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.0",
     "recoil": "^0.7.5",
+    "styled-components": "^5.3.6",
     "tinymce": "^6.2.0",
     "uuid": "^9.0.0",
     "xss": "^1.0.14"
