--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
     "recoil": "^0.7.6",
+    "recoil-nexus": "^0.4.0",
     "styled-components": "^5.3.6",
     "tinymce": "^6.3.1",
     "uuid": "^9.0.0",
