--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-intersection-observer": "^9.4.1",
     "recoil": "^0.7.6",
     "recoil-nexus": "^0.4.0",
-    "styled-components": "^6.0.0-rc.3",
+    "styled-components": "5.3.6",
     "tinymce": "^6.3.1",
     "uuid": "^9.0.0",
     "xss": "^1.0.14"
