--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
     "recoil": "^0.7.6",
@@ -33,6 +34,7 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/react-grid-layout": "^1.3.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "typescript": "4.9.4"
