--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tinymce/tinymce-react": "^4.3.0",
-    "@types/styled-components": "^5.1.26",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/uuid": "^9.0.0",
     "axios": "^1.2.3",
-    "babel-plugin-styled-components": "^2.0.7",
-    "next": "^13.2.4",
+    "next": "^14.1.1",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
@@ -23,12 +21,14 @@
     "react-intersection-observer": "^9.4.1",
     "recoil": "^0.7.6",
     "recoil-nexus": "^0.4.0",
-    "styled-components": "5.3.6",
-    "tinymce": "^6.3.1",
+    "sharp": "^0.33.5",
+    "styled-components": "6.1.13",
+    "tinymce": "^7.3.0",
     "uuid": "^9.0.0",
-    "xss": "^1.0.14"
+    "xss": "^1.0.15"
   },
   "devDependencies": {
+    "@swc/plugin-styled-components": "^3.0.2",
     "@types/node": "18.11.18",
     "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.26",
